Use the open packages for safe reflection defined by JPS in the compile server instead of our own custom list #SCL-20805
- I manually verified this list by debugging the JPS process of IDEA.